# atomic_http

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: http_benchmark.rs  http_perf.rs
docs/: router-migration.md
examples/: comparative_benchmark.rs  connection_pool_benchmark.rs  connection_pool_config_test.rs  debug_test.rs  integrated_multipart_test.rs  integrated_test.rs  load_test_client.rs  options_based_configuration.rs  performance_test.rs  production_server_setup.rs  router_test.rs  server.rs  simd_benchmark.rs  simd_comparison.rs  simple_benchmark_test.rs  simple_connection_test.rs  simple_performance_test.rs  simple_server_test.rs  simple_vectored_test.rs  vectored_io_benchmark.rs  websocket_echo_test.rs  zero_copy_test.rs
src/: connection_pool.rs  lib.rs  router.rs  websocket.rs
src/helpers/: common.rs
src/helpers/traits/: bytes.rs  http_request.rs  http_response.rs  http_stream.rs  mod.rs  zero_copy.rs
test/: .env  Cargo.toml
test/src/: main.rs
