[package]
name = "atomic_http"
version = "0.4.20"
authors = ["hsng95@gmail.com"]
description = "High level HTTP server library"
homepage = "https://github.com/rabbitson87/atomic_http"
repository = "https://github.com/rabbitson87/atomic_http"
keywords = ["http", "server", "web"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[workspace]
members = ["test"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", default-features = false, features = [
    "net",
    "macros",
    "io-util",
    "fs",
    "time",
] }
async-trait = "0.1.83"
http = "1.1.0"
serde_json = "1.0.132"
serde = "1.0.214"
tokio-rustls = { version = "0.26.0", default-features = false, optional = true }
mime_guess = { version = "2.0.5", optional = true }
dotenv = { version = "0.15.0", optional = true }

[features]
default = []
tokio_rustls = ["dep:tokio-rustls"]
response_file = ["dep:mime_guess"]
debug = []
env = ["dep:dotenv"]
