[package]
name = "atomic_http"
version = "0.11.1"
authors = ["hsng95@gmail.com"]
description = "High level HTTP server library"
homepage = "https://github.com/rabbitson87/atomic_http"
repository = "https://github.com/rabbitson87/atomic_http"
keywords = ["http", "server", "web"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[workspace]
members = ["test"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.50.0", default-features = false, features = [
    "net",
    "macros",
    "io-util",
    "fs",
    "time",
    "rt",
    "sync",
] }
async-trait = "0.1.89"
http = "1.4.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
memmap2 = { version = "0.9.10" }
mime_guess = { version = "2.0.5" }

tokio-rustls = { version = "0.26.4", default-features = false, optional = true }
dotenv = { version = "0.15.0", optional = true }

bumpalo = { version = "3.20.2", features = [
    "collections",
    "boxed",
    "serde",
], optional = true }
percent-encoding = { version = "2.3.2", optional = true }
dashmap = "6.1.0"
futures = { version = "0.3.32", optional = true }
tokio-tungstenite = { version = "0.29.0", optional = true }
matchit = { version = "0.9.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", default-features = false, features = [
    "rt-multi-thread",
] }
rand = { version = "0.10.0", features = ["std"] }
chrono = { version = "0.4.44", features = ["serde"] }

[[bench]]
name = "http_benchmark"
harness = false

[[example]]
name = "zero_copy_test"

[[example]]
name = "integrated_test"

[[example]]
name = "comparative_benchmark"

[[example]]
name = "integrated_multipart_test"

[[example]]
name = "simple_server_test"

[[example]]
name = "simple_performance_test"

[[example]]
name = "simple_benchmark_test"

[[example]]
name = "debug_test"

[[example]]
name = "simd_benchmark"

[[example]]
name = "simd_comparison"

[[example]]
name = "vectored_io_benchmark"

[[example]]
name = "simple_vectored_test"

[[example]]
name = "connection_pool_benchmark"

[[example]]
name = "simple_connection_test"

[[example]]
name = "websocket_echo_test"
required-features = ["websocket"]

[[example]]
name = "router_test"
required-features = ["router"]

[features]
default = ["arena", "simd", "vectored_io", "connection_pool"]
tokio_rustls = ["dep:tokio-rustls"]
response_file = ["dep:percent-encoding"]
debug = []
env = ["dep:dotenv"]
arena = ["dep:bumpalo"]
simd = []
vectored_io = []
connection_pool = ["dep:futures"]
websocket = ["dep:tokio-tungstenite", "dep:futures"]
router = ["dep:matchit"]
